--- a/src/main/resources/assets/i18n/i18n.properties
+++ b/src/main/resources/assets/i18n/i18n.properties
@@ -32,6 +32,8 @@ inGame.opponentBoard=Hits on Opponent
 inGame.makeHit=Make Hit
 inGame.notification.hit=That was a hit - Great!
 inGame.notification.noHit=That was not hit - Try again next round!
+inGame.notification.shipDestroyed=Great - One ship destroyed!
+inGame.notification.won=Victory! Congratulations, you have won
 inGame.notification.myTurn=Your Turn!
 inGame.notification.opponentTurn=Opponents Turn!
 inGame.notification.shipPlacement.invalid=You cant place your ship there!
