bugfix - final testing

--- a/src/main/resources/assets/i18n/i18n.properties
+++ b/src/main/resources/assets/i18n/i18n.properties
@@ -40,3 +40,4 @@ inGame.notification.myTurn=Your Turn!
 inGame.notification.opponentTurn=Opponents Turn!
 inGame.notification.shipPlacement.invalid=You cant place your ship there!
 inGame.notification.shipPlacement.allShipsPlaced=All ships placed! Waiting for opponent...
+inGame.notification.shipPlacement=Please place all your ships to continue...
