--- a/src/main/resources/assets/i18n/i18n.properties
+++ b/src/main/resources/assets/i18n/i18n.properties
@@ -1,35 +1,60 @@
+# Game
 appTitle=Battleship
 appCredentials=By Tobias Zechmann \nand Christoph Winnerl
+
+# Scene Titles
 scene.title.signUp=Sign Up
 scene.title.logIn=Login
 scene.title.joinGame=Join Game
 scene.title.createGame=Create Game
+scene.title.logOut=Log Out
+
+# Game Exit Popup
 gameExit.confirmationText=Are you sure you want to leave the game?
 gameExit.yes=Confirm
 gameExit.no=Cancel
+
+# General
 close=Close
 return=Return
+
+# LogIn/SignUp
 username.title=Username:
 password.title=Password:
 passwordRepeat.title=Repeat Password:
+
+# LogIn
 login.input.isMandatory=Please fill username and password.
 login.input.isInvalid=Username or password are incorrect.
+
+# SignUp
 signUp.input.passwords.notEqual=Password and repeated password are not equal.
 signUp.input.username.exists=Username already exists.
 signUp.input.username.toLong=Username can't exceed 12 characters.
-scene.title.logOut=Log Out
+
+# LogOut
 logout=Are you sure you want to log out?
-joinGame=Join
+
+# Join/Create Game
 gameKey.title=Key:
+
+# Join Game
+joinGame=Join
+joinGame.input.key.invalid=Key is invalid.
+
+# Create Game
 create=Create
 waitingForOpponent=Waiting for Opponent
-joinGame.input.key.invalid=Key is invalid.
+
+# In Game
 inGame.surrender=Surrender
 inGame.surrender.confirm=Are you sure you want to surrender?
 inGame.versus= vs.
 inGame.myBoard=My Battleships
 inGame.opponentBoard=Hits on Opponent
 inGame.makeHit=Make Hit
+
+# In Game Notifications
 inGame.notification.hit=That was a hit - Great!
 inGame.notification.noHit=That was not hit - Try again next round!
 inGame.notification.shipDestroyed=Great - One ship destroyed!
